--- a/Getting-Started/SoundJS/css/main.css
+++ b/Getting-Started/SoundJS/css/main.css
@@ -97,13 +97,31 @@ textarea {
    Author's custom styles
    ========================================================================== */
 
+body{
+background-image: url("lightning.jpg");	
+  padding-top: 54px;
+}
 
 
+@media (min-width: 992px) {
+  body {
+    padding-top: 56px;
+  }
+}
 
+.carousel-item {
+  height: 65vh;
+  min-height: 300px;
+  background: no-repeat center center scroll;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
 
-
-
-
+.portfolio-item {
+  margin-bottom: 30px;
+}
 
 
 
